fixing database name and connection

--- a/back/.env
+++ b/back/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
+DATABASE_URL="postgres://caketter:12345678@localhost:5432/caketter_database?schema=public"
 
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_USER=caketter
+POSTGRES_PASSWORD=12345678
