--- a/back/package.json
+++ b/back/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.3.1",
     "prisma": "^4.3.1",
+    "prisma-docs-generator": "^0.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
