--- a/back/.env
+++ b/back/.env
@@ -2,3 +2,4 @@ DATABASE_URL="postgres://caketter:12345678@localhost:5432/caketter_database?sche
 
 POSTGRES_USER=caketter
 POSTGRES_PASSWORD=12345678
+JWT_SECRET=1t6RQKsdgtN&CYcVBC601yJG@Ki2k5
