--- a/front/package.json
+++ b/front/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.12",
+    "@nestjs/jwt": "^9.0.0",
+    "argon2": "^0.30.1",
     "flowbite": "^1.5.3",
+    "passport-jwt": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.0",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "sweetalert2": "^11.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
