--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.0.12",
     "@nestjs/jwt": "^9.0.0",
     "argon2": "^0.30.1",
+    "axios": "^1.1.3",
     "flowbite": "^1.5.3",
     "passport-jwt": "^4.0.0",
     "react": "^18.2.0",
