--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.0",
     "react-router-dom": "^6.4.1",
+    "react-select": "^5.7.0",
     "sweetalert2": "^11.5.1"
   },
   "devDependencies": {
