--- a/back/package.json
+++ b/back/package.json
@@ -23,9 +23,12 @@
   "dependencies": {
     "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.2",
+    "@prisma/client": "^4.11.0",
     "@types/passport": "^1.0.11",
     "argon2": "^0.29.1",
     "class-transformer": "^0.5.1",
@@ -34,15 +37,12 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "swagger-ui-express": "^4.5.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@prisma/client": "^4.3.1",
     "prisma": "^4.3.1",
     "prisma-docs-generator": "^0.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
