--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:18.16 as build
-WORKDIR /app
+
+RUN mkdir -p /home/node/app
+WORKDIR /home/node/app
 
 COPY package*.json ./
 
@@ -8,4 +10,5 @@ RUN npm install
 COPY . .
 
 EXPOSE 3000
-CMD ["npm", "run", "dev", "--host"]
+
+CMD ["npm", "run", "dev"];
