--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ services:
     build: 
       context: ./back
       dockerfile: Dockerfile
+    volumes:
+      - ./back:/usr/src/app
+      - /usr/src/app/node_modules/
     env_file:
       - .env
     ports:
