--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:18.16 as build
 
-WORKDIR /app
+WORKDIR /usr/src/app
 
-COPY package*.json ./
+COPY package*.json /usr/src/app
 
 RUN npm install
 
