--- a/back/package.json
+++ b/back/package.json
@@ -14,7 +14,7 @@
     "start": "nest start",
     "prestart:docker": "npm run prisma:generate && npm run prisma:migrate",
     "start:docker": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest start --tsc --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
