--- a/front/package.json
+++ b/front/package.json
@@ -13,8 +13,10 @@
     "argon2": "^0.30.1",
     "axios": "^1.1.3",
     "flowbite": "^1.5.3",
+    "moment": "^2.29.4",
     "passport-jwt": "^4.0.0",
     "react": "^18.2.0",
+    "react-currency-input-field": "^3.6.11",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.0",
     "react-router-dom": "^6.4.1",
