--- a/back/.env
+++ b/back/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://caketter:12345678@localhost:5432/caketter_database?schema=public"
+DATABASE_LOCAL_URL="postgresql://caketter:12345678@localhost:5432/caketter_database?schema=public"
 
 POSTGRES_USER=caketter
 POSTGRES_PASSWORD=12345678
