--- a/front/package.json
+++ b/front/package.json
@@ -21,7 +21,8 @@
     "react-hook-form": "^7.36.0",
     "react-router-dom": "^6.4.1",
     "react-select": "^5.7.0",
-    "sweetalert2": "^11.5.1"
+    "sweetalert2": "^11.5.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
