--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "react-currency-input-field": "^3.6.11",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.4.1",
     "react-select": "^5.7.0",
     "sweetalert2": "^11.5.1",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-input-mask": "^3.0.5",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
