--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.4.1",
     "react-select": "^5.7.0",
+    "react-tooltip": "^5.26.3",
     "sweetalert2": "^11.5.1",
     "yup": "^1.3.3"
   },
